creusot/tests/should_fail/prusti/logic/sig.stderr
error[creusot]: invalid home signature, reached "('x)"
 --> sig.rs:4:9
  |
4 | #[logic(('x) -> ('x))]
  |         ^^^^^^^^^^^^

error: aborting due to previous error

